@@ -1,3 +1,8 @@
+2002-07-30  Gary Thomas  <gary@chez-thomas.org>
+
+	* src/net/net_io.c: Handle broadcast/mask setup better (failed if
+	not found in FLASH).  Also print on network info line.
+
 2002-07-18  Gary Thomas  <gary@chez-thomas.org>
 
 	* src/net/tftp_client.c: 
